syntax = "proto3";

package file_service;
option go_package = "./proto;file_service";

service FileService {
  rpc Upload(FileUploadRequest) returns (FileUploadResponse);
  rpc Download(FileDownloadRequest) returns (FileDownloadResponse);
  rpc GetByIDAndSource(GetByIDAndSourceRequest) returns (GetByIDAndSourceResponse);
}

enum STATUS {
  STATUS_UNKNOWN = 0;
  PENDING = 1;
  IN_PROGRESS = 2;
  SUCCESS = 3;
  FAILED = 4;
}

enum ContentType {
  TYPE_UNKNOWN = 0;
  IMAGE = 1;
  VIDEO = 2;
  FILE = 3;
}

message MetaData {
  string Name = 1;
  int32 Source_id = 2;
  ContentType Content_type = 3;
  string Content_source = 4;
}

message FileUploadRequest {
  MetaData Metadata = 1;
  string File_path = 2;
}

message FileUploadResponse {
  string name = 1;
  STATUS status = 2;
}

message FileDownloadRequest {
  string file_name = 1;
}

message FileDownloadResponse {
  MetaData Metadata = 1;
  string File_size = 2;
}

message GetByIDAndSourceRequest {
  int32 Source_id = 1;
  string Content_source = 2;
}

message GetByIDAndSourceResponse {
  repeated FileDownloadResponse downloads = 1;
}
